Fix integer overflow for large files in AccessManager

When receiving a file that is 2147483648 bytes (2 GiB) or larger via
KDE Connect handling the "Content-Length" header as a signed integer
would cause an integer overflow which in return causes the file transfer
to fail later on. So handle it as an unsigned long long instead.

BUG: 452972